# ml-zoomcamp-2025

./: .gitignore  README.md  pyproject.toml
01-intro/: homework.ipynb  intro.ipynb
02-regression/: 02-regression-homework-mean.ipynb  02-regression-homework-zeros.ipynb
03-classification/: 03-classification-homework.ipynb
04-evaluation/: 04-evaluation-homework.ipynb  04-notebook.ipynb
05-deployment/: Dockerfile  predict.py  predict_app.py  test_client.py  test_docker_client.py
06-trees/: 06-trees-homework.ipynb
08-deep-learning/: homework.ipynb
