[project]
name = "ml-zoomcamp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.120.0",
    "jupyter>=1.1.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
]
