[project]
name = "ml-zoomcamp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.120.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pillow>=10.0.0",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.21.0",
    "uvicorn>=0.38.0",
    "xgboost>=2.1.4",
]
